@@ -50,6 +50,8 @@
 #include <set>
 #include <string>
 
+#include <boost/scoped_ptr.hpp>
+
 #define DBG_NG LOG_STREAM(debug, engine)
 #define LOG_NG LOG_STREAM(info, engine)
 #define WRN_NG LOG_STREAM(warn, engine)
@@ -1905,6 +1907,42 @@ namespace {
 		else
 			LOG_NO << log_message << "\n";
 	}
+
+
+	typedef std::map<gamemap::location, int> recursion_counter;
+	
+	class recursion_preventer {
+		static recursion_counter counter_;
+		static const int max_recursion = 10;
+		gamemap::location loc_;
+		bool too_many_recursions_;
+
+		public:
+		recursion_preventer(gamemap::location& loc) : loc_(loc)
+		{
+			const int nill = 0;
+			recursion_counter::iterator inserted = counter_.insert(std::make_pair(loc_, nill)).first;
+			++inserted->second;
+			too_many_recursions_ = inserted->second >= max_recursion;
+		}
+		~recursion_preventer()
+		{
+			recursion_counter::iterator itor = counter_.find(loc_);
+			if (--itor->second == 0)
+			{
+				counter_.erase(itor);
+			}
+		}
+		bool too_many_recursions() const
+		{
+			return too_many_recursions_;
+		}
+	};
+
+	recursion_counter recursion_preventer::counter_ = recursion_counter();
+
+	typedef boost::scoped_ptr<recursion_preventer> recursion_preventer_ptr;
+
 	WML_HANDLER_FUNCTION(kill,handler,event_info,cfg)
 	{
 		// Use (x,y) iteration, because firing events ruins unit_map iteration
@@ -1919,11 +1957,21 @@ namespace {
 					if(utils::string_bool(cfg["fire_event"])) {
 						game_events::entity_location death_loc(un);
 						// Prevent infinite recursion of 'die' events
+						bool fire_event = true;
+						recursion_preventer_ptr recursion_prevent;
+						
 						if (event_info.loc1 == death_loc && event_info.name == "die" && !handler.first_time_only())
 						{
-							ERR_NG << "tried to fire 'die' event on primary_unit inside its own 'die' event with 'first_time_only' set to false!\n";
+							recursion_prevent.reset(new recursion_preventer(death_loc));
+
+							if(recursion_prevent->too_many_recursions())
+							{
+								fire_event = false;
+
+								ERR_NG << "tried to fire 'die' event on primary_unit inside its own 'die' event with 'first_time_only' set to false!\n";
+							}
 						}
-						else
+						if (fire_event)
 						{
 							game_events::fire("die", death_loc, death_loc);
 							un = units->find(death_loc);
